:sparkles: Relacionamento Api, Ajuste Front

--- a/Back-End/src/main/resources/application.properties
+++ b/Back-End/src/main/resources/application.properties
@@ -18,7 +18,7 @@ server.port=8081
 # spring.datasource.username=postgres
 # spring.datasource.password=j8s4684298ds74
 
-spring.datasource.url=jdbc:postgresql://localhost:55432/diario_de_obra
+spring.datasource.url=jdbc:postgresql://localhost:55432/vagas_caditados
 spring.datasource.username=postgres
 spring.datasource.password=123456
 
