:sparkles: Ajustes Front End

--- a/Back-End/src/main/resources/application.properties
+++ b/Back-End/src/main/resources/application.properties
@@ -18,9 +18,13 @@ server.port=8081
 # spring.datasource.username=postgres
 # spring.datasource.password=j8s4684298ds74
 
-spring.datasource.url=jdbc:postgresql://localhost:55432/vagas_caditados
+# spring.datasource.url=jdbc:postgresql://localhost:55432/vagas_caditados
+# spring.datasource.username=postgres
+# spring.datasource.password=123456
+
+spring.datasource.url=jdbc:postgresql://srv562949.hstgr.cloud:5434/postgres
 spring.datasource.username=postgres
-spring.datasource.password=123456
+spring.datasource.password=root
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
