:recycle: Alterando dados de conexão de banco de dados

--- a/Back-End/src/main/resources/application.properties
+++ b/Back-End/src/main/resources/application.properties
@@ -8,23 +8,17 @@ server.port=8081
 #server.ssl.key-store-password=123456
 #server.ssl.key-alias=ssl_cert
 
-# spring.datasource.driver-class-name=org.postgresql.Driver
-# spring.datasource.url=jdbc:postgresql://54.94.75.75:5433/gpp_database
-# spring.datasource.username=postgres
-# spring.datasource.password=J8a!9Rd&Q2mW7x!Lç
-
-# spring.datasource.driver-class-name=org.postgresql.Driver
-# spring.datasource.url=jdbc:postgresql://54.207.164.209:5433/gpp_database
-# spring.datasource.username=postgres
-# spring.datasource.password=j8s4684298ds74
-
 # spring.datasource.url=jdbc:postgresql://localhost:55432/vagas_caditados
 # spring.datasource.username=postgres
 # spring.datasource.password=123456
 
-spring.datasource.url=jdbc:postgresql://srv562949.hstgr.cloud:5434/postgres
+# spring.datasource.url=jdbc:postgresql://srv562949.hstgr.cloud:5434/postgres
+# spring.datasource.username=postgres
+# spring.datasource.password=root
+
+spring.datasource.url=jdbc:postgresql://autorack.proxy.rlwy.net:29419/railway
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=ouIbfAfBZhdBABPDIcevYqOoZIHCkumf
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
